# DocReview-Agent-System

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPAC_prompt.md  WHENTOCALL.md  docker-compose.yml  mcp_server_start.py  mcp_stdio_start.py  pyproject.toml  test_stdio.py  verify_mcp_clients.py  课程论文_软件工程_2022001_张三_MCP代理系统.md  课程论文任务书_软件工程_2022001_张三_MCP代理系统.md
.trae/: README.md
.trae/docs/modules/: mcp-client-usage-guide.md
.trae/prompts/docreview-agent-system/: agent-review-prompt.md
.trae/specs/docreview-agent/: checklist.md  spec.md  tasks.md
.trae/specs/docreview-agent-system/: spac-architecture-reference.md
Skill/: SKILL.md
claude-context/specs/: refactor-plan.md
doc/: specification.md
docreview-agent-system/: MCP_COMPLETION_SUMMARY.md  README.md  README_MCP.md  main.py
docreview-agent-system/examples/: mcp_usage_examples.py
docreview-agent-system/prompts/: PROMPT.md  SPAC_prompt.md  WHENTOCALL.md
docreview-agent-system/reviews/: history-review-20260520-140116.json  history-review-20260520-140316.json
docreview-agent-system/src/: config.py
docreview-agent-system/src/agents/: docreview.py  supervisor.py
docreview-agent-system/src/schemas/: __init__.py  models.py
docreview-agent-system/src/state/: __init__.py
docreview-agent-system/src/tools/: base.py
docreview-agent-system/src/utils/: llm.py  logger.py  prompt_loader.py
docreview-agent-system/src/workflows/: __init__.py  review_workflow.py
docreview-agent-system/tests/: conftest.py
docreview-agent-system/tests/test_agents/: test_docreview.py  test_supervisor.py
docreview-agent-system/tests/test_tools/: test_terminal.py  test_web_search.py
prompts/docreview-agent-system/: agent-invocation-rules.md
reports/: mcp-completion-summary.md
reviews/: history-review-20260520-134354.json  history-review-20260520-134410.json  history-review-20260520-140010.json  history-review-20260520-140242.json
specs/docreview-agent/: checklist.md  tasks.md
specs/docreview-agent-system/: system-specification.md
src/agents/: __init__.py  docreview.py  supervisor.py
src/mcp/: __init__.py  base.py  context7.py  sequential_thinking.py
src/mcp_server/: server.py  stdio_server.py
src/state/: agent_state.py
src/tools/: __init__.py  reading.py  terminal.py  web_search.py
src/utils/: prompt_loader.py
src/workflows/: __init__.py  review_workflow.py
tests/: test_path_fix.py  test_prompt_load.py
tests/test_mcp/: test_context7.py  test_sequential_thinking.py
tests/test_tools/: test_reading.py  test_terminal.py
tests/test_utils/: __init__.py  test_llm.py
tests/test_workflows/: test_review_workflow.py
